30.05.00 KB: Split part of MessageView functionality into a separate class
             to be shared with ComposeView.
             Replaced several mail_check() calls with mail_ping() in
             MailFolderCC code.
23.05.00 VZ: an importer for PINE added (settings/folders/address books)
04.06.00 VZ: Windows version now has the same (decent) icons as Unix one
02.06.00 VZ: creating MH folders with the wizard finally works
             "d&d"ing messages to group or root folder won't delete them
02.06.00 VZ: improved highlighting in the folder tree
02.06.00 KB: authentification for SMTP and NNTP
26.05.00 VZ: importing filters from XFMail
23.05.00 VZ: importers for PINE and XFMail added (settings/folders/address books)
22.05.00 VZ: template dialog allows to choose any kind of templates
19.05.00 VZ: vCards can also be exported
17.05.00 VZ: added possibility to attach vCards to outgoing messages
             added vCard import module for the address book editor
             vCard can also be imported as a single entry, not as entire book
16.05.00 KB: Calendar module does repeating events (minor glitches still)
15.05.00 KB: Mahogany now runs as "root", too. Fixes to MailCollector and invocation
             of filters. de.po is up to date.
12.05.00 VZ: added "compose with template" and "edit templates"
09.05.00 VZ: implemented reply/forward/followup with template menu commands
09.05.00 VZ: version number bumped to 0.60
03.05.00 KB: Started work on a small calendar plugin
02.05.00 VZ: folder renaming implemented
02.05.00 VZ: the log window can be shown/hidden, closing it hides it permanently
01.05.00 VZ: initial wizard small fixes: don't create servers not specified
             possibility to remember the password entered interactively
             it is possible to _not_ use Outbox and/or New Mail folders now
             the config file is, finally, created with the correct permissions
29.04.00 KB: MailFolder API cleanup, server config setting fixes,