@@ -5,6 +5,7 @@
              MailFolderCC code.
 23.05.00 VZ: an importer for PINE added (settings/folders/address books)
 04.06.00 VZ: Windows version now has the same (decent) icons as Unix one
+             the status bar/title bar messages are now customizable
 02.06.00 VZ: creating MH folders with the wizard finally works
              "d&d"ing messages to group or root folder won't delete them
 02.06.00 VZ: improved highlighting in the folder tree
